2002-05-08  Joe Shaw  <joe@assbarn.com>

	* generator/ObjectGen.cs (GenProperty): Comment the last checkin out
	because it exposes a compiler bug.
	(GenSignal): Back this change out.

2002-05-08  Joe Shaw  <joe@assbarn.com>

	* */Makefile.in: Don't allow the shell to do file globbing; makes
	--recurse work.

	* generator/ObjectGen.cs (GenProperty): We need to cast a GLib.Value
	to a GLib.Object and then to whatever it is, because explicit casts
	don't work to child classes.
	(GenSignal): Append "EventHandler" when generating signal handlers
	so we don't get symbol conflicts.

2002-05-07  Mike Kestner <mkestner@speakeasy.net>

	* generator/SymbolTable.cs : map char to string. 

2002-05-07  Mike Kestner <mkestner@speakeasy.net>

	* */Makefile.in : Add clean targets. Add -L parms.

2002-05-06  Mike Kestner <mkestner@speakeasy.net>

	* generator/ObjectGen.cs : When generating a ctor(void)
	  for subclassing purposes, mark it protected, not public.
	  Thanks to Miguel for reporting this bug.

2002-05-03  Mike Kestner <mkestner@speakeasy.net>

	* sample/makefile.win32 : add the Menu sample
	* sample/Menu.cs : A menu and box packing sample.

2002-05-02  Mike Kestner <mkestner@speakeasy.net>

	* generator/ObjectGen.cs : Add support for .custom files.
	* gtk/Window.custom : clean up build
	* sample/HelloWorld.cs : Use the customizations.
	* sample/ButtonApp.cs : Use the customizations.

2002-05-02  Mike Kestner <mkestner@speakeasy.net>

	* README : Describe the new make procedure.
	* configure.in : Add the new Makefile generation.
	* makefile : add the glue dir, make linux the default build,
	  add an install target
	* */makefile.win32 : temp build files for win32
	* */Makefile.in : new configurable make system
	* */makefile : killed
	* generator/BoxedGen.cs : Now uses GLib.Boxed
	* generator/ObjectGen.cs : Use Values for Props.
	* generator/SymbolTable.cs : Add IsEnum method.
	* glib/Boxed.cs : Major overhaul.
	* glib/Object.cs : Remove type specific (Get|Set)Property. Now