@@ -1,5 +1,10 @@
 2002-05-08  Joe Shaw  <joe@assbarn.com>
 
+	* generator/ObjectGen.cs (GenProperty): And uncomment it out because
+	the compiler bug is fixed.
+
+2002-05-08  Joe Shaw  <joe@assbarn.com>
+
 	* generator/ObjectGen.cs (GenProperty): Comment the last checkin out
 	because it exposes a compiler bug.
 	(GenSignal): Back this change out.
